[package]
name = "balance-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { workspace = true }
futures = "0.3"

# solana
solana-sdk = { workspace = true } 
solana-client = { workspace = true } 


