[package]
name = "sol-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
solana-sdk = "1.18"
